# Hospital_Management_System

./: .dockerignore  .gitignore  .replit  .vercelignore  CONFIG_VERIFICATION_SUMMARY.md  CONTRIBUTING.md  DARK_THEME_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE_GUIDE.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_QUICK_REFERENCE.md  IMMEDIATE_ACTION_FIX.md  IMPLEMENTATION_GUIDE.md  Procfile  QUICK_REFERENCE.sh  RENDER_DEPLOYMENT_ERROR_FIX.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_INSTRUCTIONS.md  SINGLE_WEB_SERVICE_DEPLOYMENT.md  TERMINAL_COMMANDS_REFERENCE.md  TROUBLESHOOTING_DECISION_TREE.md  db.sqlite3  docker-compose.override.yml.example  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  render.yaml  replit.md  vercel.json  vite.config.js
.migration-backup/: .env.example  DOCUMENTATION_INDEX.md  Dockerfile  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_GUIDE.md  SETUP_SUMMARY.md  START_HERE.md  UPGRADE_COMPLETE.md  docker-compose.yml  render.yaml
attached_assets/: Pasted-Design-a-modern-professional-Hospital-Management-System_1776699177547.txt  Pasted-Production-Hospital-Management-System-Transformation-Pr_1781508641200.txt  Pasted-You-are-a-Senior-Software-Architect-Senior-Full-Stack-D_1781499294074.txt  Pasted-You-are-a-Senior-Software-Architect-Senior-Full-Stack-D_1781501863997.txt
backend/: .env.example  db.sqlite3  requirements.txt
core/: models.py  serializers.py  urls.py  views.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js
hospital_system/: settings.py
scripts/: docker-up.sh  migrate.sh
src/: App.jsx
(+212 files in other folders)
